Fix loading cover z-index

--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,7 @@ video {
     top: 0;
     left: 0;
     background: #fff;
+    z-index: 1000;
 }
 
 #header {
